@@ -74,6 +74,24 @@ begin_import
 import|import
 name|java
 operator|.
+name|security
+operator|.
+name|AccessController
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|security
+operator|.
+name|PrivilegedAction
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|ArrayList
@@ -122,6 +140,15 @@ operator|.
 name|util
 operator|.
 name|NoSuchElementException
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Objects
 import|;
 end_import
 begin_import
@@ -197,6 +224,7 @@ name|String
 argument_list|>
 name|linesIterator
 decl_stmt|;
+comment|/** Creates a new SPI iterator to lookup services of type {@code clazz} using the context classloader. */
 DECL|method|get
 specifier|public
 specifier|static
@@ -233,6 +261,7 @@ argument_list|()
 argument_list|)
 return|;
 block|}
+comment|/** Creates a new SPI iterator to lookup services of type {@code clazz} using the given classloader. */
 DECL|method|get
 specifier|public
 specifier|static
@@ -266,7 +295,7 @@ name|loader
 argument_list|)
 return|;
 block|}
-comment|/** Utility method to check if some class loader is a (grand-)parent of or the same as another one.    * This means the child will be able to load all classes from the parent, too. */
+comment|/**    * Utility method to check if some class loader is a (grand-)parent of or the same as another one.    * This means the child will be able to load all classes from the parent, too.    *<p>    * If Lucene's codebase doesn't have enough permissions to do the check, {@code false} is returned.    */
 DECL|method|isParentClassLoader
 specifier|public
 specifier|static
@@ -277,20 +306,54 @@ specifier|final
 name|ClassLoader
 name|parent
 parameter_list|,
+specifier|final
 name|ClassLoader
 name|child
 parameter_list|)
 block|{
+if|if
+condition|(
+name|parent
+operator|==
+name|child
+condition|)
+block|{
+return|return
+literal|true
+return|;
+comment|// don't try to use AccessController for performance
+block|}
+return|return
+name|AccessController
+operator|.
+name|doPrivileged
+argument_list|(
+call|(
+name|PrivilegedAction
+argument_list|<
+name|Boolean
+argument_list|>
+call|)
+argument_list|()
+operator|->
+block|{
+try|try
+block|{
+name|ClassLoader
+name|cl
+init|=
+name|child
+decl_stmt|;
 while|while
 condition|(
-name|child
+name|cl
 operator|!=
 literal|null
 condition|)
 block|{
 if|if
 condition|(
-name|child
+name|cl
 operator|==
 name|parent
 condition|)
@@ -299,38 +362,76 @@ return|return
 literal|true
 return|;
 block|}
-name|child
+name|cl
 operator|=
-name|child
+name|cl
 operator|.
 name|getParent
 argument_list|()
-expr_stmt|;
+argument_list|;
 block|}
 return|return
 literal|false
 return|;
 block|}
-DECL|method|SPIClassIterator
-specifier|private
-name|SPIClassIterator
+end_class
+begin_catch
+catch|catch
 parameter_list|(
+name|SecurityException
+name|se
+parameter_list|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+end_catch
+begin_empty_stmt
+unit|})
+empty_stmt|;
+end_empty_stmt
+begin_expr_stmt
+unit|}      private
+DECL|method|SPIClassIterator
+name|SPIClassIterator
+argument_list|(
 name|Class
 argument_list|<
 name|S
 argument_list|>
 name|clazz
-parameter_list|,
+argument_list|,
 name|ClassLoader
 name|loader
-parameter_list|)
+argument_list|)
 block|{
 name|this
 operator|.
 name|clazz
 operator|=
+name|Objects
+operator|.
+name|requireNonNull
+argument_list|(
 name|clazz
-expr_stmt|;
+argument_list|,
+literal|"clazz"
+argument_list|)
+block|;
+name|this
+operator|.
+name|loader
+operator|=
+name|Objects
+operator|.
+name|requireNonNull
+argument_list|(
+name|loader
+argument_list|,
+literal|"loader"
+argument_list|)
+block|;
 try|try
 block|{
 specifier|final
@@ -348,19 +449,6 @@ name|this
 operator|.
 name|profilesEnum
 operator|=
-operator|(
-name|loader
-operator|==
-literal|null
-operator|)
-condition|?
-name|ClassLoader
-operator|.
-name|getSystemResources
-argument_list|(
-name|fullName
-argument_list|)
-else|:
 name|loader
 operator|.
 name|getResources
@@ -369,6 +457,8 @@ name|fullName
 argument_list|)
 expr_stmt|;
 block|}
+end_expr_stmt
+begin_catch
 catch|catch
 parameter_list|(
 name|IOException
@@ -392,23 +482,8 @@ name|ioe
 argument_list|)
 throw|;
 block|}
-name|this
-operator|.
-name|loader
-operator|=
-operator|(
-name|loader
-operator|==
-literal|null
-operator|)
-condition|?
-name|ClassLoader
-operator|.
-name|getSystemClassLoader
-argument_list|()
-else|:
-name|loader
-expr_stmt|;
+end_catch
+begin_expr_stmt
 name|this
 operator|.
 name|linesIterator
@@ -424,9 +499,10 @@ operator|.
 name|iterator
 argument_list|()
 expr_stmt|;
-block|}
+end_expr_stmt
+begin_function
+unit|}      private
 DECL|method|loadNextProfile
-specifier|private
 name|boolean
 name|loadNextProfile
 parameter_list|()
@@ -665,6 +741,8 @@ return|return
 literal|false
 return|;
 block|}
+end_function
+begin_function
 annotation|@
 name|Override
 DECL|method|hasNext
@@ -683,6 +761,8 @@ name|loadNextProfile
 argument_list|()
 return|;
 block|}
+end_function
+begin_function
 annotation|@
 name|Override
 DECL|method|next
@@ -781,6 +861,8 @@ argument_list|)
 throw|;
 block|}
 block|}
+end_function
+begin_function
 annotation|@
 name|Override
 DECL|method|remove
@@ -795,6 +877,6 @@ name|UnsupportedOperationException
 argument_list|()
 throw|;
 block|}
-block|}
-end_class
+end_function
+unit|}
 end_unit
